adding query practice

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="container-fluid">
-          <header class="row-fluid">
+          <header class="row">
             <div class="col-sm-12"></div>
           </header>
         </div>
         <div class="container-fluid">
-          <nav class="row-fluid">
+          <nav class="row">
             <div class="col-sm-12"></div>
           </nav>
         </div>
         <div class="container-fluid">
-          <content class="row-fluid">
+          <content class="row">
             <div class="col-sm-9"></div>
             <div class="col-sm-3"></div>
           </content>
         </div>
         <div class="container-fluid">
-          <promo class="row-fluid">
+          <promo class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-3"></div>
             <div class="col-sm-3"></div>
@@ -37,14 +37,16 @@
           </promo>
         </div>
         <div class="container-fluid">
-          <footer class="row-fluid">
+          <footer class="row">
             <div class="col-sm-12"></div>
           </footer>
         </div>
       </div>
     </div>
-  </div>
-
+      </div>
+<div class="query-test">
+  <h1 class="query-practice">This is text</h1>
+</div>
   <script> ssrc="https://code.jquery.com/jquery-2.2.4.min.js"</script>
   <script> src="js/bootstrap.min.js"</script>
 </body>
